cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_231.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bf/bf_enc.c:171: error: DEAD_STORE
  The value written to &ivec (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bf/bf_enc.c:171:9: Write of unused value
169.           }
170.           l2n(xor0, ivec);
171.           l2n(xor1, ivec);
               ^
172.       }
173.       tin0 = tin1 = tout0 = tout1 = xor0 = xor1 = 0;
